--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     command: "npm run dev"
     networks:
       - nuxt-network
+    volumes:
+      - '.:/var/www/mixpro'
 networks:
   nuxt-network:
     driver: bridge
