--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "eslint-loader": "^4.0.2",
+    "nuxt": "^2.15.7",
+    "vue-multiselect": "^2.1.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
